Fix overlapping tables on more internals page.
Bug: 40070444
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6641885
Commit-Queue: Zekun Jiang <zekunjiang@google.com>
Cr-Commit-Position: refs/heads/main@{#1473696}

--- a/chrome/browser/resources/on_device_internals/event_log.css
+++ b/chrome/browser/resources/on_device_internals/event_log.css
@@ -8,6 +8,11 @@
  * #scheme=relative
  * #css_wrapper_metadata_end */
 
+th,
+td {
+  overflow: auto;
+}
+
 .source-location {
   text-overflow: ellipsis;
   white-space: nowrap;
